--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -37,4 +37,4 @@ jobs:
           context: .
           push: true
           tags: |
-            solareenlo/ubuntu-valgrind:latest
+            solareenlo/42valgrind:latest
